# libutype

./: .gitignore  AUTHORS  Makefile  Makefile.in  configure  configure.ac  libutype.pc.in
include/: Makefile.am  cbuf.h  list.h
src/: Makefile.am  Makefile.in  avl-cmp.c  avl.c  avl.h  cbuf.c  cbuf.h  kvlist.c  list.h  utils.h
test/: Makefile.am  Makefile.in  avl.c  cbuf.c  profiling.c
